--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,15 +1,4 @@
 .header__lang-link {
-  margin: 0 18px 0 0;
-  padding: 0;
-}
-
-.header__lang-link:last-of-type {
-  margin: 0;
-}
-
-@media screen and (max-width: 760px) {
-  .header__lang-links {
-    font-size: 18px;
-    line-height: 20px;
-  }
+ text-decoration: none;
+ color: #fff;
 }
