--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -1,15 +1,13 @@
-.header__lang-links {
-  margin: 0;
-  padding: 0;
+.header__lang {
+  margin: 0 0 6px;
   list-style-type: none;
-  text-decoration: underline;
-  display: flex;
+  display: block;
   font-size: 24px;
   line-height: 28px;
 }
 
 @media screen and (max-width: 760px) {
-  .header__lang-links {
+  .header__lang {
     font-size: 18px;
     line-height: 20px;
   }
