--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,5 @@
 .lead__caption {
-  margin: 8px 0 0;
+  margin: 5px 0 0;
   font-size: 10px;
   line-height: 14px;
   letter-spacing: 1.5px;
@@ -9,6 +9,6 @@
 
 @media screen and (max-width: 760px) {
   .lead__caption {
-    margin: 0 16px 40px;
+    margin: 5px 16px 40px;
   }
 }
