--- a/pages/index.css
+++ b/pages/index.css
@@ -17,3 +17,5 @@
 @import url(../blocks/lead/__caption/lead__caption.css);
 
 @import url(../blocks/intro/intro.css);
+
+@import url(../blocks/photo-grid/photo-grid.css);
