--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,4 +6,5 @@ body {
   font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
   font-weight: normal;
   margin: 0 auto;
+  max-width: 1280px;
 }
