--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,4 +1,5 @@
 .photo-grid {
+  margin: 0 0 92px;
   display: grid;
   padding: 0 48px;
   grid-gap: 16px;
@@ -49,6 +50,3 @@
 .photo-grid__item_ergaki {
   background-image: url(../../images/photo-grid-ergaki.jpg);
 }
-
-
-
