Добавил секцию footer

--- a/pages/index.css
+++ b/pages/index.css
@@ -24,4 +24,5 @@
 @import url(../blocks/place/place.css);
 /*Сделать по БЕМ*/
 @import url(../blocks/cover/cover.css);
-
+/*Сделать по БЕМ*/
+@import url(../blocks/footer/footer.css);
