--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -36,7 +36,10 @@
   margin: 0 auto;
   min-height: calc(0.625 * min(1184px, 100vw));
   z-index: 0;
-  ;
+}
+
+.cover:hover .cover__overlay {
+  opacity: 0.8;
 }
 .cover__bacground {
   background-image: url(../../images/cover-trains.jpg);
