--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,6 +2,12 @@
   padding: 0 48px 24px;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 760px) {
+  .footer {
+    padding: 0 16px 24px;
+  }
 }
 
 .footer__menu {
@@ -12,11 +18,25 @@
   margin: 0;
   padding: 0;
 }
+@media screen and (max-width: 760px) {
+  .footer__menu {
+    font-size: 24px;
+    line-height: 24px;
+    margin-bottom: 48px;
+  }
+}
 
 .footer__menu-item {
   display: inline;
   margin: 0 14px 0 0;
 }
+@media screen and (max-width: 760px) {
+  .footer__menu-item {
+    display: block;
+    margin: 0 14px 32px 0;
+  }
+}
+
 .footer__menu-item:last-of-type {
   margin: 0;
 }
