--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,10 +4,23 @@
   max-width: 984px;
 }
 
+@media screen and (max-width: 760px) {
+  .intro {
+    margin: 63px 16px 63px;
+  }
+}
+
 .intro__title {
   margin: 0 0 40px;
   font-size: 54px;
   line-height: 58px;
+}
+
+@media screen and (max-width: 760px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
 }
 
 .intro__text {
@@ -15,6 +28,11 @@
   font-size: 16px;
   line-height: 26px;
   max-width: 690px;
+}
+@media screen and (max-width: 760px) {
+  .intro__text {
+
+  }
 }
 
 .intro__list {
@@ -27,4 +45,12 @@
 
 .intro__list_bold {
   font-weight: 600;
+}
+
+
+
+
+@media screen and (max-width: 760px) {
+  .intro {
+  }
 }
