--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -7,6 +7,12 @@
   text-align: left;
 }
 
+@media screen and (max-width: 1020px) {
+  .lead__caption {
+    margin: 5px 24px 40px;
+  }
+}
+
 @media screen and (max-width: 760px) {
   .lead__caption {
     margin: 5px 16px 40px;
