--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,12 @@
 .lead {
-  width: 100%;
+  width: 90.5%;
   max-width: 984px;
   margin: 0 auto;
   text-align: center;
+}
+
+@media screen and (max-width: 1023px) {
+  .lead {
+    width: 100%;
+  }
 }
