--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,10 +1,20 @@
 .photo-grid {
-  margin: 0 0 92px;
+  margin: 0 48px 92px;
   display: grid;
-
   grid-gap: 16px;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-  grid-template-rows: repeat(3, minmax(213px, 1fr));
+}
+
+@media screen and (max-width: 1270px) {
+  .photo-grid {
+    margin: 0 48px 92px;
+  }
+}
+
+@media screen and (max-width: 1020px) {
+  .photo-grid {
+    margin: 0 24px 88px;
+  }
 }
 
 @media screen and (max-width: 760px) {
