--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,12 +1,20 @@
 .places {
-  width: 100%;
+  width: 90.5%;
   max-width: 984px;
   margin: 0 auto 92px;
+}
+
+@media screen and (max-width: 1020px) {
+  .places {
+    margin: 0 24px 90px;
+    width: calc(100% - 48px);
+  }
 }
 
 @media screen and (max-width: 760px) {
   .places {
     margin: 0 auto 66px;
+    width: 100%;
   }
 }
 
@@ -20,7 +28,16 @@
 .places__place:last-of-type {
   margin: 0;
 }
-
+@media screen and (max-width: 1270px) {
+  .places__place {
+    gap: 48px 18px;
+  }
+}
+@media screen and (max-width: 1020px) {
+  .places__place {
+    margin: 0 0 60px;
+  }
+}
 @media screen and (max-width: 760px) {
   .places__place {
     gap: 32px;
@@ -34,6 +51,13 @@
   font-weight: bold;
   font-size: 72px;
   line-height: 76px;
+}
+@media screen and (max-width: 1020px) {
+  .places__title {
+    font-size: 42px;
+    line-height: 46px;
+    width: 94%;
+  }
 }
 
 @media screen and (max-width: 760px) {
@@ -84,9 +108,20 @@
 }
 
 .places__image {
-  width: 100%;
+  width: 95%;
   object-fit: contain;
 }
+@media screen and (max-width: 1270px) {
+  .places__image {
+    width: 97%;
+  }
+}
+@media screen and (max-width: 760px) {
+  .places__image {
+    width: 100%;
+  }
+}
+
 
 .places__paragraph {
   margin: 0 0 26px;
@@ -98,6 +133,17 @@
   margin: 0;
 }
 
+@media screen and (max-width: 1020px) {
+  .places__paragraph {
+    font-size: 16px;
+    line-height: 26px;
+    margin: 0 0 25px;
+
+  }
+  .places__paragraph:last-of-type {
+    margin: 0 0 0;
+  }
+}
 
 @media screen and (max-width: 760px) {
   .places__paragraph {
@@ -108,5 +154,4 @@
   .places__paragraph:last-of-type {
     margin: 0 16px 0;
   }
-
 }
