--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,7 +3,7 @@
   font-size: 72px;
   line-height: 76px;
   text-align: center;
-  font-weight: bold;
+  font-weight: 900;
   max-width: 560px;
 }
 @media screen and (max-width: 760px) {
