--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,7 +1,7 @@
 .places__title {
   margin: 0;
   align-self: end;
-  font-weight: bold;
+  font-weight: 900;
   font-size: 72px;
   line-height: 76px;
 }
