--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,10 +4,13 @@
   font-size: 18px;
   line-height: 22px;
   text-align: center;
+  z-index: 1;
 }
 @media screen and (max-width: 760px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
+    width: 288px;
+    padding: 0 16px 0;
   }
 }
