--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,11 +5,14 @@
   text-align: center;
   font-weight: 900;
   max-width: 560px;
+  z-index: 1;
 }
 @media screen and (max-width: 760px) {
   .cover__title {
     font-size: 32px;
     line-height: 35px;
     margin: 0 0 16px;
+    width: 288px;
+    padding: 0 16px 0;
   }
 }
