--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,8 +1,15 @@
 .cover {
   padding: 0;
-  margin: 0 0 92px;
+  margin: 0 auto 92px;
   position: relative;
-
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(../../../images/cover-trains.jpg);
+  background-size: cover;
+  max-width: 1184px;
+  min-height: calc(0.625 * min(1184px, 100vw));
 }
 @media screen and (max-width: 760px) {
   .cover {
