--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,6 +4,11 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
+@media screen and (max-width: 1020px) {
+  .footer {
+    padding: 0 24px 24px;
+  }
+}
 @media screen and (max-width: 760px) {
   .footer {
     padding: 0 16px 24px;
