--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -6,7 +6,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-image: url(../../../images/cover-trains.jpg);
+  background-image: url(../../images/cover-trains.jpg);
   background-size: cover;
   max-width: 1184px;
   min-height: calc(0.625 * min(1184px, 100vw));
