--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,5 @@
 .cover__title {
-  margin: 0 0 32px;
+  margin: 0 auto 32px;
   font-size: 72px;
   line-height: 76px;
   text-align: center;
@@ -11,7 +11,7 @@
   .cover__title {
     font-size: 32px;
     line-height: 35px;
-    margin: 0 0 16px;
+    margin: 0 auto 16px;
     width: 288px;
     padding: 0 16px 0;
   }
