--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,15 +2,42 @@
   padding: 0;
   margin: 0 auto 92px;
   position: relative;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
   background-image: url(../../images/cover-trains.jpg);
   background-size: cover;
   max-width: 1184px;
   min-height: calc(0.625 * min(1184px, 100vw));
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.cover::before {
+  content: '';
+  background-color: #2A2C2F;
+  opacity: 0.3;
+  position: absolute;
+  inset: 0;
+  max-width: 1184px;
+  margin: 0 auto;
+  min-height: calc(0.625 * min(1184px, 100vw));
+  z-index: 0;
+}
+.cover::after {
+  content: '';
+}
+
+.cover:hover:after{
+  content: '';
+  background-color: #2A2C2F;
+  opacity: 0.8;
+  position: absolute;
+  inset: 0;
+  max-width: 1184px;
+  margin: 0 auto;
+  min-height: calc(0.625 * min(1184px, 100vw));
+  z-index: 0;
+}
+
 @media screen and (max-width: 760px) {
   .cover {
     margin: 0 0 64px;
